# csifish

./: Cargo.toml  README.md  build.rs
benches/benchmark/: main.rs
src/: lib.rs
src/csifish/: constant_time.rs  constants.rs  hash.rs  lattice.rs  merkle.rs  mod.rs  montgomery.rs  signature.rs  variable_time.rs
src/csifish/field_arithmetic/: arithmetic.rs  base_field.rs  classgroup.rs  display.rs  helpers.rs  mod.rs
src/csifish/field_arithmetic/inv/: README  modinv_arm.S  modinv_x86.S
src/csifish/field_arithmetic/inv/include/: modinv.h
